# garnet

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  environment.yml  logging.conf  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: actions.yml  package.yml
conda.recipe/: meta.yaml
docs/: README.md  conf.py  getting_started.rst
docs/source/: GUI_standards.rst  MVP_guidelines.rst  conf.py  getting_started.rst  index.rst  logging.rst  reference.rst
docs/source/Developer/: Coding_standards.rst  MVP_guidelines.rst  index.rst
docs/source/design/: index.rst  instrument.rst  ndip.rst  ndip_home.rst  ndip_integration.rst  ndip_normalization.rst  ndip_reduction_plan.rst  normalization_algo.rst  oncat.rst  oncat_general.rst  oncat_mvp.rst  reduction_plan.rst  reduction_plan_mvp.rst  tab_normalization.rst  tab_reduction_plan.rst
docs/source/developer/: base_ui_elements.rst  coding_standards.rst  gui_standards.rst  index.rst  logging_guidelines.rst  mvp_guidelines.rst  testing_standards.rst
src/garnet/: __init__.py  __main__.py  configuration.py  configuration_template.ini  garnet.py  logger.py  mainwindow.py  version.py
src/garnet/coverage/: model.py  presenter.py  view.py
src/garnet/helpers/: logger.py  settings.py
src/garnet/helpers/ui_elements/: base_checkbox.py  base_lineedit.py  base_listwidget.py  base_statusbar.py  base_tablewidget.py
src/garnet/home/: home_presenter.py  home_view.py  model.py  presenter.py  view.py
src/garnet/logging/: logging.py
src/garnet/models/: help.py  main.py
src/garnet/order_param/: model.py  presenter.py  view.py
src/garnet/peak_integr/: model.py  presenter.py  view.py
src/garnet/recp_space/: model.py  presenter.py  view.py
src/garnet/ub_peak_find/: model.py  presenter.py  view.py
src/garnet/views/: mainwindow.py
tests/: conftest.py  test_version.py
tests/shared/: test_garnet_data.py
tests/tabs/: README.md
tests/tabs/home/presenter/: test_home_presenter.py
tests/tabs/home/views/: README.md  test_home.py  test_welcome.py
tests/utility/: README.md  test_garnet_data.py  test_gui.py  test_logger.py  test_settings.py
tests/utility/ui_elements/: test_base_checkbox.py  test_base_lineedit.py  test_base_listwidget.py  test_base_statusbar.py  test_base_tablewidget.py
tests/workflows/: README.md
