[project]
name = "garnet"
description = "The Single Crystal Graphical Advanced Reduction Neutron Event Toolkit Project"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0" }

[project.urls]
homepage = "https://github.com/neutrons/garnet/"

[build-system]
requires = ["setuptools", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/garnet/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[project.gui-scripts]
garnet = "garnet.garnet:gui"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "mymarker: example markers goes here"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
# suggestions: BLE blind exceptions, I sorts imports
# Full pylint PL = PLC, PLE, PLR (~500 issues), PLW. Enable most
select = ["A", "ARG", "E", "F", "PLC", "PLE", "PLW"]
ignore = ["A002", "A003", # shadowing python built-ins
          "ARG001", "ARG002", # unused argument
          "E402", # import not at the top of the file
	  "E712", # comparison to false
          "E741", # ambiguous variable name
]
