[project]
name = "garnet"
description = "The Single Crystal Graphical Advanced Reduction Neutron Event Toolkit Project"
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0" }

[project.urls]
homepage = "https://github.com/neutrons/garnet/"

[build-system]
requires = ["setuptools", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/garnet/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*", "notebooks*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[project.gui-scripts]
garnet = "garnet.garnet:gui"

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
python_files = ["test*.py"]
norecursedirs = [".git", "tmp*", "_tmp*", "__pycache__", "*dataset*", "*data_set*"]
markers = [
    "datarepo: Tests that require the test-data submodule"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
# suggestions: BLE blind exceptions, I sorts imports
# Full pylint PL = PLC, PLE, PLR (~500 issues), PLW. Enable most
select = ["A", "ARG", "E", "F", "W", "PL", "C90", "I", "N", "D", "UP032", "ANN", "ASYNC",
 "S303", "S307", "S308", "BLE", "B015", "B021", "PIE", "T20", "SIM", "PT"]
ignore = ["D203", # conflict with D211
          "D213", # conflict with D212
          "D400", "D415", "ANN201", # Unnecessary
          ]
