[metadata]
name = garnet
version = 0.0.1
description = The Single Crystal Graphical Advanced Reduction Neutron Event Toolkit Project
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/neutrons/garnet

[options]
package_dir=
   =src
include_package_data = True
packages = find:
python_requires >= 3.10
install_requires =
    mantidworkbench
    qtpy
tests_require =
    flake8
    ruff
    pytest
    mock

[options.entry_points]
console_scripts =
    garnet = garnet.__main__:main

[options.packages.find]
where =
    src
exclude =
    tests*

[options.package_data]
* =
   *.ui
   *.txt
   *.yml
   *.yaml
   *.qss

[options.extras_require]
dev =
    versioningit
tests = pytest

[flake8]
max-line-length = 120
ignore = E203
exclude = conda.recipe/meta.yml

[versioning]
source-version-file = garnet/_version.py
version-pattern = {tag}
commit-message-pattern = {raw}
tag-message-pattern = {raw}

[coverage:run]
source = src/garnet
omit =
        */tests/*
        conda.recipe/*
        docs/*
        notebooks/*
        src/garnet/__init__.py
        src/garnet/_version.py

[coverage:report]
 # temp set low until project is more developed, default 60
fail_under = 1
exclude_lines =
  if __name__ == "__main__":
